--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Cyberoam Client:
 
-Introduction: this is a python script to directly login to cyberoam.
+Introduction: A python script to directly login to cyberoam.
 
 Language Used: Python
 
@@ -8,4 +8,4 @@ Library's Used: PyQt4(QtGui,Qt,QtCore,uic.loadUi), time , urllib, urllib2
 
 Feature Added:
 
-1: Multiple User feed so no inutuption during internet usage.
+1: Multiple User feed so no interuption during internet usage.
